# GrammarProducts

./: .buildbot-devel  .gitmodules  .travis.yml  GramProd.hs  GrammarProducts.cabal  MultiAlign.hs  README.md  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  shell.nix  stack.yaml
BioInf/: GrammarProducts.hs
BioInf/GrammarProducts/: Direct.hs  Grammar.hs  Haskell.hs  LaTeX.hs  Parser.hs  TH.hs  Tools.hs
BioInf/GrammarProducts/Op/: Add.hs  Direct.hs  Power.hs  Scalar.hs  Subtract.hs
FormalLanguage/: GrammarProduct.hs
FormalLanguage/GrammarProduct/: Op.hs  Parser.hs  QQ.hs  TH.hs
FormalLanguage/GrammarProduct/Examples/: AlignGlobal.hs
FormalLanguage/GrammarProduct/Op/: Add.hs  Chomsky.hs  Common.hs  Greibach.hs  Linear.hs  LinearDirect.hs  Power.hs  Subtract.hs
FormalLanguage/GrammarProduct/Op/Chomsky/: Proof.hs
FormalLanguage/GrammarProduct/Op/Greibach/: Proof.hs
old/: MultiAlign.hs
old-BioInf/: GrammarProducts.hs
old-BioInf/GrammarProducts/: Haskell.hs  Helper.hs  LaTeX.hs  Parser.hs
old-BioInf/GrammarProducts/Examples/: QQ.hs
src/: AlignGlobal.hs
tests/: align.gra  dnadnaprotein.gra  fourway.gra  gotoh-xy.gra  gotoh.gra  nway.gra  protein.gra  simple-protein.gra
