name:           GrammarProducts
version:        0.0.0.2
author:         Christian Hoener zu Siederdissen, 2013
copyright:      Christian Hoener zu Siederdissen, Ivo L. Hofacker, Peter F. Stadler, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Grammar products and higher-dimensional grammars
description:
                This library provides the framework for the automatic
                generation of complex grammars from more simple building
                blocks. Internally, grammars are written using ADPfusion
                operations and yield efficient code.
                .
                We provide a library with a parser for grammatical constructs.
                Parsed grammars can be combined in several ways and transformed
                into ADPfusion constructs which yield efficient implementations
                of the combined grammars. Alternatively, such combined grammars
                may be pretty-printed using the "GrammarProducts" executable.
                .
                Grammar attributes, or algebras, are /not/ handled. They 
                .
                .
                .
                Formal background can be found in:
                .
                .
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                .
                How to Multiply Dynamic Programming Algorithms
                .
                Brazilian Symposium on Bioinformatics (BSB 2013)
                .
                Lecture Notes in Bioinformatics 8213, Springer, Heidelberg



Extra-Source-Files:



library
  build-depends:
    base >= 4 && < 5,
--    algebra,
--    ansi-wl-pprint ,
--    ansi-wl-pprint,
--    bytestring ,
--    containers ,
--    data-default,
--    ghc-prim ,
--    haskell-src ,
--    haskell-src-exts,
--    haskell-src-meta,
--    HaTeX,
--    lens ,
--    nats,
--    newtype,
--    parsers,
--    primitive      >= 0.5     ,
--    repa,
--    semigroups ,
--    template-haskell          ,
--    text,
--    th-build,
--    transformers,
--    trifecta ,
--    tuple-th,
--    unordered-containers,
--    vector         >= 0.10
    ADPfusion      >= 0.2.0   ,
    FormalGrammars >= 0.0.0.1 ,
    PrimitiveArray >= 0.5.1.0
  exposed-modules:
    FormalLanguage.GrammarProduct
    FormalLanguage.GrammarProduct.Op.Greibach
    FormalLanguage.GrammarProduct.Op.Chomsky
    FormalLanguage.GrammarProduct.Op.LinearDirect
--    BioInf.GrammarProducts
--    BioInf.GrammarProducts.Grammar
--    BioInf.GrammarProducts.Haskell
--    BioInf.GrammarProducts.Helper
--    BioInf.GrammarProducts.LaTeX
--    BioInf.GrammarProducts.Op.Add
--    BioInf.GrammarProducts.Op.Direct
--    BioInf.GrammarProducts.Op.Power
--    BioInf.GrammarProducts.Op.Subtract
--    BioInf.GrammarProducts.Parser
--    BioInf.GrammarProducts.Tools
--    BioInf.GrammarProducts.TH
  ghc-options:

--executable GramProd
--  build-depends:
--    cmdargs == 0.10.*
--  main-is:
--    GramProd.hs



source-repository head
  type: git
  location: git://github.com/choener/GrammarProducts

